@@ -171,6 +171,19 @@ public class TempletonControllerJob extends Configured implements Tool, JobSubmi
     return 0;
   }
 
+  private String addJavaOpensPackages(String amJavaOpts) {
+    return String.join(" ",
+        amJavaOpts,
+        "--add-opens=java.base/java.net=ALL-UNNAMED",
+        "--add-opens=java.base/java.util=ALL-UNNAMED",
+        "--add-opens=java.base/java.util.concurrent=ALL-UNNAMED",
+        "--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED",
+        "--add-opens=java.base/java.lang=ALL-UNNAMED",
+        "--add-opens=java.base/java.io=ALL-UNNAMED",
+        "--add-opens java.base/java.util.regex=ALL-UNNAMED"
+    );
+  }
+
   private String addToken(Job job, String user, String type) throws IOException, InterruptedException,
           TException {
     if(!secureMetastoreAccess) {
